2001-02-19  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c: changed my email and added 2001 to about dialog.

2001-02-15  Jaka Mocnik  <jaka@gnu.org>

	* po/sl.po: added missing slovene translations.
	* po/fr.po: fixed french translations as suggested by
	lorna.whelan@ireland.sun.com (fixes bugs #50910 and #50908).

2001-02-04 John Fleck <jfleck@inkstain.net>

	* converted English help docs to sgml, added screenshots
	(help/C/), updated Makefile.am to handle new kit

2001-01-26  Fatih Demir	<kabalak@gmx.net>

	* configure.in: Added tr to ALL_LINGUAS.

2000-12-13  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in (ALL_LINGUAS): added sk

2000-10-22  John Gotts  <jgotts@linuxsavvy.com>

	* New spec file.  Enjoy!

2000-10-21  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* some fixes for use with libgnomeprint 0.24. bumped version
	to 1.1.4 and released a new tarball.
	
2000-09-15 Yukihiro Nakai <nakai@gnome.gr.jp>

	* Add ja to help/Makefile.am 
	* Add help/ja/Makefile to configure.in

2000-07-01  Yukihiro Nakai <nakai@gnome.gr.jp>

	* configure.in: Add help/ja/Makefile to AC_OUTPUT

2000-06-30  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* src/gtkhex.c: applied a patch from 
        Gavin Scott <gavindscott@yahoo.com>, fixing a few segfaults with
	narrow windows.

2000-05-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ghex.spec: added a spec file from John Gotts
	<jgotts@linuxsavvy.com>.

2000-05-09  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* configure.in: bumped version to 1.1.3. released a new tarball
	to go with GNOME 1.1.90.
	* src/main.c (main): #if 0ed out the icons setting call.
	* src/gtkhex.c (render_ac, render_xc): use proper fonts.

2000-05-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* src/preferences.c (create_prefs_dialog): change font selection
	to a button with font name that brings up a font selection dialog.
	add possibility to select a separate font for the header.
	(get_font_label): create a label for the font button.