@@ -1,3 +1,8 @@
+2001-02-20  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/gtkhex.c (gtk_hex_size_request): take offset column into
+	account in order to make place for 16 bytes in a row.
+
 2001-02-19  Jaka Mocnik  <jaka@gnu.org>
 
 	* src/ui.c: changed my email and added 2001 to about dialog.
